Sync gestionProjets updates: project tasks, stats, PDF export, sidebar active state